fixed sd album bullets from expanding outside of page on mobile. Fixed images from crunching on mobile by adding max-width property

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,12 @@ a.logo {
   text-align: center;
 }
 
+glide__bullets button {
+  padding: 40px;
+}
+
 .glide__slides img {
+  max-width: 100%;
   max-height: 450px;
 }
 
@@ -128,23 +133,14 @@ a.logo {
   text-align: center;
 }
 
-.glide__arrow {
-  position: absolute;
-  bottom:50px;
-  background-color: rgba(0,0,0,0);
-  border: none;
-  outline:none;
-  color:white;
-}
-
 .glide__arrow--prev {
   left:0;
-  top:30px;
+  top:60%;
 }
 
 .glide__arrow--next {
   right:0;
-  top:30px;
+  top:60%;
 }
 
 .glide__arrow a:hover {
